[package]
name = "embedder"
version = "0.3.1"
edition = "2021"
description = "Get basic website information with ease."
license = "MIT"
repository = "https://github.com/tascord/embedder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["sync", "rt"] }
async-process = { version = "2.0.1", optional = true }
fantoccini = { version = "0.19.3", optional = true }
which = { version = "5.0.0", optional = true }
lazy_static = {version = "1.4.0", optional = true}
futures = "0.3.29"
reqwest = "0.11.22"
scraper = "0.18.1"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["sync", "rt", "macros"] }

[features]
default = []
driver = ["fantoccini", "async-process", "which", "lazy_static"]
