[package]
name = "embedder"
version = "0.3.4"
edition = "2021"
description = "Get basic website information with ease."
license = "MIT"
repository = "https://github.com/tascord/embedder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
async-process = { version = "2.0.1", optional = true }
fantoccini = { version = "0.19.3", optional = true }
which = { version = "6.0.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
futures = { version = "0.3.29", optional = true }
http = { version = "0.2.12", optional = true }

reqwest = "0.12.4"
scraper = "0.20.0"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["sync", "rt", "macros"] }

[features]
default = []
driver = ["fantoccini", "async-process", "which", "lazy_static", "http", "futures"]
