[package]
name = "embedder"
version = "0.3.5"
edition = "2021"
description = "Get basic website information with ease."
license = "MIT"
repository = "https://github.com/tascord/embedder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98" }
serde = { version = "1.0.193", features = ["derive"] }
async-process = { version = "2.0.1", optional = true }
fantoccini = { version = "0.22.0", optional = true }
which = { version = "8.0.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
futures = { version = "0.3.29", optional = true }
http = { version = "1.3.1", optional = true }
hyper = { version = "1.6.0", features = ["http1", "client"], optional = true }
http-body-util = { version = "0.1.3", optional = true }

reqwest = "0.12.4"
scraper = "0.23.1"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["sync", "rt", "macros"] }

[features]
default = []
driver = [
    "async-process",
    "fantoccini",
    "futures",
    "http",
    "http-body-util",
    "hyper",
    "lazy_static",
    "which",
]
container = ["driver"]
